# logos-wallpaper-updater

./: .gitignore  CMakeLists.txt  Licence.txt
mac/: Info.plist  qtbundle  setWallpaper.scpt
mac/Resources/: appicon.icns
mac/Scripts/: setWallpaper
mac/bundle/Contents/Resources/: appicon.icns
mac/bundle/Contents/Resources/Scripts/: setWallpaper
resources/: about.xhtml  help.xhtml  resources.qrc
source/: CMakeLists.txt  about.ui  aboutDialog.cpp  aboutDialog.h  application.cpp  application.h  applicationUpdater.cpp  applicationUpdater.h  defines.h.cmake  help.ui  helpDialog.cpp  helpDialog.h  instanceManager.cpp  instanceManager.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  progressWidget.cpp  progressWidget.h  progressWidget.ui  versionNumber.cpp  versionNumber.h  wallpaperGetter.cpp  wallpaperGetter.h
win/: installer.nsi.cmake
